greeter.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-golang-api
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: k8-simple-golang:1.0
          resources:
            requests:
              memory: "50Mi"
              cpu: "200m"
            limits:
              memory: 100Mi
              cpu: 700m
          ports:
            - containerPort: 8000

---
kind: Service
apiVersion: v1
metadata:
  name: api-service
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - port: 8000
