ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /hello/
            backend:
              serviceName: api-service
              servicePort: 8000
          - path: /stranger/
            backend:
              serviceName: stranger-service
              servicePort: 5678
